# procafocia

./: .env.example  .gitignore  README.md  STATUS.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_bom.py  routes_circularity.py  routes_mapping.py  routes_pcf.py  routes_products.py  routes_scenarios.py
backend/app/core/: config.py  logging.py
backend/app/data/: default_scenarios.py  mapping_rules_seed.json
backend/app/data_providers/: boavizta_provider.py  lci_provider_base.py  probas_provider.py  soda4lca_provider.py
backend/app/db/: base.py  init_db.py  models.py
backend/app/engines/: circularity_engine_base.py  circularity_engine_pci_bracquene2020.py  pcf_engine_base.py  pcf_engine_brightway.py
backend/app/integrations/: soda4lca_client.py
backend/app/models/: bom.py  method_profile.py  pci.py  product.py  results.py  scenario.py
backend/app/schemas/: bom_schema.py  mapping_schema.py  method_profile_schema.py  pci_result_schema.py  product_schema.py  results_schema.py  scenario_schema.py
backend/app/services/: circularity_service.py  export_service.py  ingestion_service.py  mapping_repository.py  mapping_service.py  pcf_service.py  (+4 more)
backend/tests/: test_api_basic.py  test_circularity_service.py  test_mapping_service.py  test_method_profiles.py  test_pcf_service.py  test_soda4lca_provider.py
examples/: bom_office_chair.csv  bom_power_drill.csv  demo_script.py  example_bom.csv  mapping_review_cli.py
frontend/: app.js  index.html  styles.css
infra/: Dockerfile.backend  Dockerfile.frontend  README-infra.md  docker-compose.yml
